# node-tspsolver

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  binding.gyp  package-lock.json  package.json
src/: addon.cpp  index.d.ts  index.js  random.h  sa.h  spec.js  tsp.cpp  tsp.h  tsp_v8.cpp  tsp_v8.h  tsplib_reader.js
src/testcases/: d3j8  qa194  rw1621  uy734  wi29  zi929
